--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,18 +1,23 @@
 @import "./variable.scss";
 .AppOne{
-    top: 10px;
-    left: 10px;
     position: fixed;
+    width: 100%;
+    background-color: black;
+    padding: 10px 0px;
 }
 .AppTwo{
-    bottom: 10px;
-    right: 10px;
+    background-color: rgb(139, 115, 209);
     position: fixed;
+    width: 100%;
+    bottom: 0;
+    padding: 10px 0px;
 }
 .App-input{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 0px 10px;
     img{
         width: 50px;
         height: 50px;
@@ -27,27 +32,17 @@
         border-radius: 10px;
         outline: none;
         border: none;
+        flex: 1;
     }
 }
 .App-center{
     width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 100px;
-    bottom: 100px;
-    left: 0px;
-    right: 0px;
+    padding: 80px 0px;
 }
 .App-list{
     padding: 0px;
     width: 100%;
-    max-width: 1200px;
     height: 100%;
-    overflow: scroll;
-    border: 1px solid black;
-    &::-webkit-scrollbar{
-        display: none;
-    }
     li{
         list-style: none;
         display: flex;
