--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -55,7 +55,7 @@
             padding: 5px 0px 5px 5px;
             border-radius: 10px;
             width: 70%;
-            height: 100%;
+            height: 150px;
         }
         span{
             user-select: none;
