--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,6 @@ body {
   width: 100%;
   height: 100%;
   font-family: Verdana;
-  background: linear-gradient(147deg, #d2d7da, #85c9c1);
+  background: linear-gradient(147deg, #e6a8ff, #85c9c1);
   position: relative;
 }
