--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,16 @@
 @import "./variable.scss";
+.Body_img{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
+    z-index: -1;
+    filter:  blur(5px);
+}
 .AppOne{
     position: fixed;
     width: 100%;
@@ -60,6 +72,10 @@
         span{
             user-select: none;
             width: 70%;
+            box-shadow: 5px 3px 6px 0px rgba(0, 0, 0, 0.74);
+            padding: 10px;
+            background-color: #fff4;
+            border-radius: 10px;
         }
         +li{
             margin-top: 30px;
@@ -68,7 +84,10 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            width: 70px;
+            width: 80px;
+            background-color: aliceblue;
+            padding: 5px;
+            border-radius: 5px;
             .App-list_svg__edit{
                 @include btnTodo(green);
                 &:hover{
