--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,12 +39,12 @@
     }
     input{
         padding-left: 10px;
+        width: 100%;
         height: 40px;
         margin: 0px 10px;
         border-radius: 10px;
         outline: none;
         border: none;
-        flex: 1;
     }
 }
 .App-center{
