--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,10 @@
 .Header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     height: 70px;
-    background-color: black;
+    background-color: white;
     width: 100%;
     display: flex;
     align-items: center;
@@ -12,28 +16,25 @@
         align-items: center;
         justify-content: flex-start;
         flex: 1;
+        padding: 0px 10px;
         input{
             flex: 1;
             padding: 5px 0px 5px 10px;
             outline: none;
             border: none;
             border-radius: 10px;
+            background-color: black;
+            color: white;
         }
     }
     span{
         color: black;
-        padding: 5px 10px;
-        background-color: white;
-        border-radius: 100vh;
+        padding: 3px 10px;
+        border-radius: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
-        border: 2px solid rgb(79, 179, 215);
         cursor: pointer;
-        margin: 0px 10px;
-        &:nth-child(2){
-            margin-left: 0px;
-        }
         i{
             color: rgb(205, 214, 155);
             font-size: 20px;
