--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,14 +11,14 @@
     justify-content: space-between;
     user-select: none;
     padding: 15px 0px;
-    .Header-Sort{
+    .Header-Input{
         display: flex;
         align-items: center;
-        justify-content: flex-start;
-        flex: 1;
+        justify-content: center;
+        flex: 2;
         padding: 0px 10px;
         input{
-            flex: 1;
+            width: 100%;
             padding: 5px 0px 5px 10px;
             outline: none;
             border: none;
@@ -27,17 +27,27 @@
             color: white;
         }
     }
-    span{
-        color: black;
-        padding: 3px 10px;
-        border-radius: 10px;
+    .Header-Sort{
         display: flex;
         align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        i{
-            color: rgb(205, 214, 155);
-            font-size: 20px;
+        justify-content: flex-end;
+        flex: 1;
+        padding: 0px 10px;
+        span{
+            color: black;
+            padding: 2px 10px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            i{
+                color: rgb(205, 214, 155);
+                font-size: 20px;
+            }
+            +span{
+                margin-left: 5px;
+            }
         }
     }
 }
