--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,3 +15,16 @@ body {
   font-family: Verdana;
   position: relative;
 }
+
+html {
+  --s: 89px; /* control the size*/
+  --c1: #f8e3e3;
+  --c2: #ffffff;
+  
+  --_g: #0000 90deg,var(--c1) 0;
+  background: 
+    conic-gradient(from 90deg at 2px 2px,var(--_g)),
+    conic-gradient(from 90deg at 1px 1px,var(--_g)),
+    var(--c2);
+  background-size: var(--s) var(--s), calc(var(--s)/5) calc(var(--s)/5);
+}
