--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -89,3 +89,37 @@
         }
     }
 }
+.App-box_image{
+    user-select: none;
+    width: 70%;
+    box-shadow: 5px 3px 6px 0px rgba(0, 0, 0, 0.74);
+    padding: 10px;
+    background-color: #fff4;
+    border-radius: 10px;
+    .-box_image-img{
+        width: 70%;
+        height: auto;
+        margin: 0px auto;
+        img{
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .-box_image-delta{
+        h3{
+            font-weight: 500;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 1;
+            -webkit-box-orient: vertical;
+        }
+        p{
+            font-weight: 300;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+        }
+    }
+}
