--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -97,6 +97,7 @@
     background-color: #fff4;
     border-radius: 10px;
     .-box_image-img{
+        max-width: 300px;
         width: 70%;
         height: auto;
         margin: 0px auto;
