--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,14 +17,15 @@ body {
 }
 
 html {
-  --s: 89px; /* control the size*/
-  --c1: #f8e3e3;
-  --c2: #ffffff;
+  --s: 50px; /* control the size*/
+  --c1: #fcfcfc;
+  --c2: #f5f5f5;
   
-  --_g: #0000 90deg,var(--c1) 0;
-  background: 
-    conic-gradient(from 90deg at 2px 2px,var(--_g)),
-    conic-gradient(from 90deg at 1px 1px,var(--_g)),
-    var(--c2);
-  background-size: var(--s) var(--s), calc(var(--s)/5) calc(var(--s)/5);
+  background:
+    radial-gradient(25% 50%,var(--c1) 98%,#0000)
+     var(--s) 0/calc(2*var(--s)) var(--s),
+    radial-gradient(25% 50%,var(--c2) 98%,#0000)
+     0 0/calc(2*var(--s)) var(--s),
+    repeating-conic-gradient(var(--c1) 0 25%,var(--c2) 0 50%) 
+     0 0/calc(2*var(--s)) calc(2*var(--s));
 }
