--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,6 +11,7 @@
     justify-content: space-between;
     user-select: none;
     padding: 15px 0px;
+    z-index: 10;
     .Header-Input{
         display: flex;
         align-items: center;
