--- a/src/styles/cooking.scss
+++ b/src/styles/cooking.scss
@@ -4,6 +4,19 @@
     user-select: none;
 }
 
+.Cooking-pushHome{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #fff4;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 10px;
+    i{
+        color: gray;
+    }
+}
+
 .Cooking-body{
     max-width: 1200px;
     width: 100%;
